# crewai-openterms

./: README.md  pyproject.toml
.github/workflows/: publish.yml
crewai_openterms/: __init__.py  tools.py
tests/: test_tools.py
